--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Runner"]
 	path = Runner
-	url = git://github.com/mootools/mootools-runner.git
+	url = ggit@github.com:quizlet/Mootools-Runner.git
