--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Runner"]
 	path = Runner
-	url = ggit@github.com:quizlet/Mootools-Runner.git
+	url = git@github.com:quizlet/Mootools-Runner.git
